# learning_platform

./: Dockerfile  data.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_subscription_options.py  0005_course_updated_at.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_payment.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_amount.py  0004_alter_payment_course_alter_payment_lesson.py  0005_payment_session_id_alter_payment_course_and_more.py  0006_payment_link.py  0007_alter_payment_payment_type.py  0008_alter_payment_session_id.py
